@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 02:42:50 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 05:32:06 +0800</lastBuildDate>
 
   <item>
   <title>東京秋季大盛事！煙火、海燈、萬聖節，10月份必去的10大活動</title>
@@ -25,5 +25,11 @@
   <description>在東京體驗傳統日本文化如何見到藝妓如果你錯過了在京都祇園見到藝妓的機會不要擔心在東京也有機會見到藝妓只要你知道在哪裡找藝妓是許多人嚮往的傳統日本文化體驗雖然京都...</description>
   <category>Others</category>
   <pubDate>Sat, 12 Oct 2024 02:42:50 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意</title>
+  <link>https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意.html</link>
+  <description>東京萬聖節新規澀谷和新宿呼籲民眾避免前往東京的澀谷和新宿地區再次呼籲民眾在萬聖節期間避免前往這兩個地區在過去的萬聖節慶祝活動中都遇到了大量遊客和垃圾問題現在決定...</description>
+  <category>Others</category>
+  <pubDate>Sat, 12 Oct 2024 05:32:06 +0800</pubDate>
 </item></channel>
 </rss>
