@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 05:30:43 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 05:32:06 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -91,5 +91,11 @@
   <description>KpopCEO們在國會聽證會上迴避重點問題10月7日Kpop娛樂公司在國會聽證會上否認或迴避對行業內的重大問題承擔責任YG娛樂CEO楊賢碩SM娛樂CEO張哲赫和JYP娛樂CEO鄭煜出席了國會聽證會回答議員們關於榜單操縱專輯與照片卡捆綁銷售公平交易法違反和舞蹈版權問題的提問海譜Hybe由其子公司WeverseCo的CEO崔俊代表出席民主黨議員林五卿提出了榜單操縱的問題指出娛樂...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 05:30:43 +0800</pubDate>
+</item><item>
+  <title>東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意</title>
+  <link>https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意.html</link>
+  <description>東京萬聖節新規澀谷和新宿呼籲民眾避免前往東京的澀谷和新宿地區再次呼籲民眾在萬聖節期間避免前往這兩個地區在過去的萬聖節慶祝活動中都遇到了大量遊客和垃圾問題現在決定...</description>
+  <category>Others</category>
+  <pubDate>Sat, 12 Oct 2024 05:32:06 +0800</pubDate>
 </item></channel>
 </rss>
