@@ -92,4 +92,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/東京萬聖節新規出爐！澀谷、新宿嚴打街頭飲酒，遊客請注意.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T05:32:06+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
