@@ -12,3 +12,4 @@ https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241010050640
 https://www.koreaherald.com/view.php?ud=20241008050610
 https://www.koreaherald.com/view.php?ud=20241002050661
+https://www.koreaherald.com/view.php?ud=20241007050694
